--- a/src/components/layouts/AdminLayout/AdminLayout.module.css
+++ b/src/components/layouts/AdminLayout/AdminLayout.module.css
@@ -69,3 +69,15 @@
   font-size: 1.2rem;
   margin-bottom: -4px;
 }
+.loader {
+  width: 40px;
+  height: 40px;
+}
+.loaderWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
