--- a/src/pages/Manage/SchedulePage/SchedulePage.module.css
+++ b/src/pages/Manage/SchedulePage/SchedulePage.module.css
@@ -15,3 +15,10 @@
   padding-top: 20px;
   margin-bottom: 10px;
 }
+.weeksConatiner {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: start;
+}
