--- a/src/components/Schedule/Weeks/WeekContainer/WeekContainer.module.css
+++ b/src/components/Schedule/Weeks/WeekContainer/WeekContainer.module.css
@@ -1,7 +1,6 @@
 .container {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  width: 100%;
   gap: 10px;
-  flex-wrap: wrap;
-  justify-content: start;
 }
