--- a/src/components/UI/Modals/Modal/Modal.module.css
+++ b/src/components/UI/Modals/Modal/Modal.module.css
@@ -6,7 +6,7 @@
   position: fixed;
   inset: 0;
   background: #000;
-  opacity: 0.3;
+  opacity: 0.5;
 }
 .panelWrapper {
   position: fixed;
@@ -23,7 +23,7 @@
 }
 
 .panel {
-  background: #fff;
+  background: var(--color-background);
   border-radius: 8px;
   padding: 20px;
 }
@@ -37,10 +37,12 @@
 }
 .title {
   font-size: 1.2rem;
+  color: var(--color-copy);
 }
 .closeButton {
   font-size: 20px;
   margin-left: auto;
   margin-bottom: -3px;
   min-width: max-content;
+  color: var(--color-copy);
 }
