--- a/src/components/Schedule/Weeks/WeekItem/WeekItem.module.css
+++ b/src/components/Schedule/Weeks/WeekItem/WeekItem.module.css
@@ -2,18 +2,19 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
-  flex: 1 1 0;
   min-width: 250px;
   border-radius: 8px;
   padding: 10px;
 }
 .title {
   font-size: 1.2rem;
-  text-align: center;
+  text-align: left;
+  margin-left: 5px;
+  color: var(--color-copy);
 }
 .content {
   display: flex;
   flex-direction: column;
   gap: 5px;
-  margin-top: 10px;
+  margin-top: 5px;
 }
