--- a/src/components/UI/ErrorLabel/ErrorLabel.module.css
+++ b/src/components/UI/ErrorLabel/ErrorLabel.module.css
@@ -1,20 +1,20 @@
 .wrapper {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-    background-color: #ff3f23;
-    color: #fff;
-    border-radius: 8px;
-    padding: 8px 15px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  background-color: var(--color-error);
+  color: var(--color-error-content);
+  border-radius: 8px;
+  padding: 8px 15px;
 }
 .icon {
-    color: #fff;
-    font-size: 1.5rem;
+  color: var(--color-error-content);
+  font-size: 1.5rem;
 }
 .textWrapper {
-    width: 100%;
+  width: 100%;
 }
 .text {
-    font-size: 1rem;
+  font-size: 1rem;
 }
