--- a/src/components/UI/Inputs/Select/Select.module.css
+++ b/src/components/UI/Inputs/Select/Select.module.css
@@ -1,9 +1,9 @@
 .button {
   position: relative;
-  border: 1px solid #eaeaea;
-  background-color: #fff;
+  border: 1px solid var(--color-border);
+  background-color: var(--color-background);
   border-radius: 8px;
-  color: #000;
+  color: var(--color-copy);
   padding: 10px 15px;
   text-align: left;
   text-decoration: none;
@@ -28,11 +28,11 @@
 }
 
 .button:hover:not([disabled]):not(:active) {
-  background-color: #f0f0f0;
+  background: var(--color-foreground);
 }
 
 .button:focus-visible {
-  outline: 2px solid #ff6410;
+  outline: 2px solid var(--color-outline);
 }
 .button[data-open] .icon {
   transform: rotate(180deg) translateY(-1px);
@@ -46,13 +46,14 @@
 }
 .options {
   margin-top: 5px;
-  background: #fff;
+  background: var(--color-foreground);
   border-radius: 8px;
   box-shadow: 0 0 30px 0 rgba(103, 70, 54, 0.1);
   padding: 5px;
   display: flex;
   flex-direction: column;
   gap: 5px;
+  z-index: 50;
 }
 .option {
   position: relative;
@@ -61,12 +62,13 @@
   padding-left: 35px;
   border-radius: 8px;
   transition: background-color 0.2s ease;
+  color: var(--color-copy);
 }
 .option:hover {
-  background-color: #f0f0f0;
+  background-color: var(--color-primary);
 }
 .option[data-selected] {
-  background-color: #f0f0f0;
+  background-color: var(--color-primary);
 }
 
 .inputLabel {
