--- a/src/components/UI/NavigationSidebar/NavigationSidebar.module.css
+++ b/src/components/UI/NavigationSidebar/NavigationSidebar.module.css
@@ -14,28 +14,29 @@
   border-radius: 10px;
   cursor: pointer;
   width: 100%;
-  color: #454545;
-  border: 1px solid #eaeaea;
+  color: var(--color-primary-content);
+  background: var(--color-primary-light);
   white-space: nowrap;
   min-width: max-content;
-  transition: background-color 0.2s ease;
+  transition:
+    background-color 0.2s ease,
+    transform 0.2s ease,
+    box-shadow 0.2s ease;
+  border: 2px solid transparent;
 }
 
 .navigationItem:hover:not([disabled]):not(.navigationItemActive) {
-  background-color: #f0f0f0;
+  position: relative;
+  transform: translateY(-3px);
 }
 
 .navigationItem:focus-visible {
-  outline: 2px solid #ff6410;
+  outline: 2px solid var(--color-outline);
 }
 
 .navigationItemActive {
-  background-color: #ffaa2aff;
-  border: 1px solid #ffaa2aff;
-  color: #fff;
-}
-.navigationItemActive:hover {
-  background-color: #ff9f10;
+  background-color: var(--color-primary-content);
+  color: var(--color-primary);
 }
 
 .navigationWrapper {
