--- a/src/components/UI/Paginator/Paginator.module.css
+++ b/src/components/UI/Paginator/Paginator.module.css
@@ -6,7 +6,7 @@
 }
 
 .pageItem {
-  border: 1px solid #ccc;
+  border: 1px solid var(--color-border);
   border-radius: 8px;
   width: 35px;
   height: 35px;
@@ -19,15 +19,15 @@
 }
 
 .pageItem:hover:not(.active) {
-  background-color: #e6e6e6;
+  background: var(--color-primary-dark);
 }
 
 .active {
-  background-color: #ffaa2aff;
-  color: #fff;
-  border-color: #ffaa2aff;
+  background-color: var(--color-primary);
+  color: var(--color-copy);
+  border-color: var(--color-primary);
 }
 
 .pageItem:focus-visible {
-  outline: 2px solid #ff6410;
+  outline: 2px solid var(--color-outline);
 }
