--- a/src/components/UI/Panels/BasePanel/BasePanel.module.css
+++ b/src/components/UI/Panels/BasePanel/BasePanel.module.css
@@ -1,8 +1,8 @@
 .basePanel {
-    background: #fff;
-    border-radius: 20px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0 0 30px 0 rgba(103, 70, 54, 0.1);
+  background: var(--color-foreground);
+  border-radius: 20px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 0 30px 0 rgba(103, 70, 54, 0.1);
 }
