--- a/src/components/app/AppWrapper.module.css
+++ b/src/components/app/AppWrapper.module.css
@@ -1,6 +1,5 @@
 .appWrapper {
-    height: 100vh;
-    width: 100vw;
-    background: #FFF8E8;
-    padding: 0 10px;
+  min-height: 100vh;
+  max-width: 100vw;
+  background: var(--color-background);
 }
