--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -1,63 +1,65 @@
 .loginPage {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
 }
 
 .loginForm {
-    margin-top: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
 .loginFormTitle {
-    font-size: 2rem;
-    font-weight: 500;
-    text-align: center;
-    margin-bottom: 10px;
+  font-size: 2rem;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 10px;
+  color: var(--color-copy);
 }
 
 .loginFormInput {
-    width: 100%;
+  width: 100%;
 }
 
 .panel {
-    width: 100%;
-    max-width: 400px;
-    padding: 30px;
+  width: 100%;
+  max-width: 400px;
+  padding: 30px;
 }
 
 .spinner_V8m1 {
-    transform-origin: center;
-    animation: spinner_zKoa 2s linear infinite
+  transform-origin: center;
+  animation: spinner_zKoa 2s linear infinite;
 }
 
 .spinner_V8m1 circle {
-    stroke-linecap: round;
-    animation: spinner_YpZS 1.5s ease-in-out infinite
+  stroke-linecap: round;
+  animation: spinner_YpZS 1.5s ease-in-out infinite;
 }
 
 @keyframes spinner_zKoa {
-    100% {
-        transform: rotate(360deg)
-    }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes spinner_YpZS {
-    0% {
-        stroke-dasharray: 0 150;
-        stroke-dashoffset: 0
-    }
-    47.5% {
-        stroke-dasharray: 42 150;
-        stroke-dashoffset: -16
-    }
-    95%, 100% {
-        stroke-dasharray: 42 150;
-        stroke-dashoffset: -59
-    }
+  0% {
+    stroke-dasharray: 0 150;
+    stroke-dashoffset: 0;
+  }
+  47.5% {
+    stroke-dasharray: 42 150;
+    stroke-dashoffset: -16;
+  }
+  95%,
+  100% {
+    stroke-dasharray: 42 150;
+    stroke-dashoffset: -59;
+  }
 }
