--- a/src/pages/RegisterPage/RegisterPage.module.css
+++ b/src/pages/RegisterPage/RegisterPage.module.css
@@ -1,31 +1,32 @@
 .registerPage {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
 }
 
 .registerForm {
-    margin-top: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 .registerFormTitle {
-    font-size: 2rem;
-    font-weight: 500;
-    text-align: center;
-    margin-bottom: 10px;
+  font-size: 2rem;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 10px;
+  color: var(--color-copy);
 }
 
 .panel {
-    width: 100%;
-    max-width: 400px;
-    padding: 30px !important;
+  width: 100%;
+  max-width: 400px;
+  padding: 30px !important;
 }
 
 .registerFormInput {
-    width: 100%;
+  width: 100%;
 }
