--- a/src/components/UI/Inputs/Select/Select.module.css
+++ b/src/components/UI/Inputs/Select/Select.module.css
@@ -76,6 +76,7 @@
   margin-bottom: 2px;
   font-size: 0.8rem;
   display: block;
+  color: var(--color-copy);
 }
 .option[data-selected] .buttonIcon {
   display: block !important;
